modi/beta-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: beta
  name: beta

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beta-deployment
  namespace: beta
spec:
  replicas: 1
  selector:
    matchLabels:
       env: debug
  template:
    metadata:
      labels:
        env: debug
    spec:
      containers:
      - name: beta-container
        image: rancher/curlimages-curl:7.73.0
        imagePullPolicy: Always
