modi/env-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: ubuntu-con
        image: ubuntu
        command: ["/bin/sleep", "infinity"]
