modi/lbale1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: labelpod
  labels:
    environment: staging
    tier: frontend
spec:
  containers: 
  - name: labelcontainer
    image: nginx
    ports:
    - containerPort: 80
